:bug: Fix display issue on mobile safari

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -198,12 +198,16 @@ small > p {
 
 .darkmode-switch {
     box-sizing: border-box;
-    text-align: start;
+    text-align: center;
     border-radius: 50%;
     background-color: var(--dark);
     border: 1px solid var(--dark);
-    width: 28px;
-    height: 28px;
+    width: 26px;
+    height: 26px;
+    padding-top: 2px;
+    padding-right: 4px;
+    padding-bottom: 2px;
+    padding-left: 4px;
 }
 
 .darkmode-switch:hover {
@@ -211,7 +215,10 @@ small > p {
 }
 
 .moon {
-    width: 100%;
-    height: 100%;
     font-family: var(--font-family);
+}
+
+button {
+    padding: 0;
+    margin: 0;
 }
